--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "type": "library",
     "require": {
 		"php": ">=5.4",
-        "rmccue/requests": ">=1.0"
+        "rmccue/requests": ">=1.0",
+        "guzzlehttp/guzzle": "^7.4"
     },
 	"autoload": {
         "psr-4": {
