--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "keywords": ["postal", "mail"],
     "license": "MIT",
     "homepage":"https://github.com/atech/postal",
-    "minimum-stability": "dev",
+    "version": "1.2-stable",
     "authors": [
         {
             "name": "Adam Cooke",
