--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "keywords": ["postal", "mail"],
     "license": "MIT",
     "homepage":"https://github.com/atech/postal",
-    "version": "1.2-stable",
+    "version": "v1.1",
     "authors": [
         {
             "name": "Adam Cooke",
