--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "keywords": ["postal", "mail"],
     "license": "MIT",
     "homepage":"https://github.com/atech/postal",
-    "version": "v1.1",
+    "version": "v1.2",
     "authors": [
         {
             "name": "Adam Cooke",
@@ -18,7 +18,7 @@
     "type": "library",
     "require": {
 		"php": ">=7.0",
-        "guzzlehttp/guzzle": "^7.4"
+        "guzzlehttp/guzzle": ">=7.4.1"
     },
 	"autoload": {
         "psr-4": {
